feat: use polyfill for showOpenFilePicker

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/hammerjs": "^2.0.40",
     "@types/webgl2": "^0.0.6",
     "@webgpu/types": "^0.1.7",
+    "3d-force-graph": "^1.71.1",
     "express": "^4.17.1",
+    "file-system-access": "^1.0.4",
     "formidable": "^2.0.1",
     "gl-matrix": "^3.4.3",
     "hammerjs": "^2.0.8",
