--- a/.github/workflows/on_merge_pr_against_main.yaml
+++ b/.github/workflows/on_merge_pr_against_main.yaml
@@ -35,7 +35,11 @@ jobs:
     - name: Update GCE instance metadata with changes
       run: |
         gcloud compute ssh eqg-ziggurat-visualizer --zone=europe-west1-b -- rm -rf shomwe && gsutil -m cp -r gs://eqg-ziggurat-bucket/showme .
-    
+  
+    - name: Stop previous Ziggurat visualizer
+      run: |
+        pm2 delete 0
+
     - name: Run Ziggurat visualizer
       run: |
-        gcloud compute ssh eqg-ziggurat-visualizer --zone=europe-west1-b -- ls && cd showme && npm i && npm run build && npm run start
+        gcloud compute ssh eqg-ziggurat-visualizer --zone=europe-west1-b -- ls && cd showme && npm i && npm run build && pm2 start "npm run start" --name egq-visualizer
