--- a/.github/workflows/on_merge_pr_against_main.yaml
+++ b/.github/workflows/on_merge_pr_against_main.yaml
@@ -38,4 +38,4 @@ jobs:
   
     - name: Stop previous Ziggurat visualizer
       run: |
-        gcloud compute ssh eqg-ziggurat-visualizer --zone=europe-west1-b -- sudo npm install pm2 -g && cd showme && npm i && npm run build && pm2 delete 0 && pm2 start "npm run start" --name egq-visualizer
+        gcloud compute ssh eqg-ziggurat-visualizer --zone=europe-west1-b -- sudo npm install pm2 -g && cd showme && npm i && npm run build && pm2 delete 0 && pm2 start "npm run start" --name egq-visualizerr
