Improve speed of uploading to GCS

--- a/.github/workflows/on_merge_pr_against_main.yaml
+++ b/.github/workflows/on_merge_pr_against_main.yaml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Upload Ziggurat to Cloud Storage
       run: |
-        gsutil cp -r ../showme gs://eqg-ziggurat-bucket/
+        gsutil -m cp -r ../showme gs://eqg-ziggurat-bucket/
 
     - name: Update GCE instance metadata with changes
       run: |
