--- a/.github/workflows/on_merge_pr_against_main.yaml
+++ b/.github/workflows/on_merge_pr_against_main.yaml
@@ -28,15 +28,22 @@ jobs:
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
 
-    - name: Upload Ziggurat to Cloud Storage
-      run: |
-        gsutil -m cp -r ../showme gs://eqg-ziggurat-bucket/
+    - name: Login to GCR
+      uses: docker/login-action@v2
+      with:
+        registry: europe-west3-docker.pkg.dev
+        username: oauth2accesstoken
+        password: ${{ steps.auth.outputs.access_token }}
 
-    - name: Update GCE instance metadata with changes
+    - id: build-docker-image
+      name: Build Docker image using BuildKit
+      uses: docker/build-push-action@v2.10.0
+      with:
+        context: ./
+        file: ./Dockerfile
+        push: true
+        tags: europe-west3-docker.pkg.dev/eqg-ziggurat/eqg-ziggurat/eqg-ziggurat-visualizer:${{github.ref_name}}
+          
+    - name: Run Ziggurat visualizer
       run: |
-        gcloud compute ssh eqg-ziggurat-visualizer --zone=europe-west1-b -- rm -rf shomwe && gsutil -m cp -r gs://eqg-ziggurat-bucket/showme .
-  
-    - name: Stop previous Ziggurat visualizer
-      run: |
-        gcloud compute ssh eqg-ziggurat-visualizer --zone=europe-west1-b -- sudo npm install pm2 -g
-        gcloud compute ssh eqg-ziggurat-visualizer --zone=europe-west1-b -- sudo npm install pm2 -g && cd showme && npm i && npm run build && sudo pm2 delete 0 && sudo pm2 start "npm run start" --name egq-visualizerr
+        gcloud compute ssh eqg-ziggurat-visualizer --zone=europe-west1-b -- docker rm -f $(docker ps -aq) && sudo docker pull europe-west3-docker.pkg.dev/eqg-ziggurat/eqg-ziggurat/eqg-ziggurat-visualizer:${{github.ref_name}} && sudo docker run europe-west3-docker.pkg.dev/eqg-ziggurat/eqg-ziggurat/eqg-ziggurat-visualizer:${{github.ref_name}} -p 3000:3000
