--- a/.github/workflows/on_merge_pr_against_main.yaml
+++ b/.github/workflows/on_merge_pr_against_main.yaml
@@ -32,8 +32,9 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: europe-west3-docker.pkg.dev
-        username: oauth2accesstoken
-        password: ${{ steps.auth.outputs.access_token }}
+        username: _json_key
+        password: ${{ secrets.GCP_CREDENTIALS }}
+
 
     - id: build-docker-image
       name: Build Docker image using BuildKit
